--- a/0-styles.css
+++ b/0-styles.css
@@ -244,7 +244,7 @@
 
       .hero {
         max-width: 637px;
-        margin: auto;
+        margin: 0 auto;
         padding-top: 312px;
         padding-bottom: 111px;
         text-align: center;
@@ -256,4 +256,8 @@
         font-weight: bold;
       }
 
-      
+      @media all and (max-width: 480px) {
+        .hero {
+          margin: 0 5%;
+        }
+      }
