--- a/1-styles.css
+++ b/1-styles.css
@@ -212,6 +212,12 @@
       }
 
       /* Responsive Background and Menu */
+      @media all and (max-width: 767px) {
+        .header-logo {
+          padding-left: 3%;
+        }
+      }
+      
       @media all and (max-width: 480px) {
 
         .header {
@@ -267,6 +273,7 @@
 
       .what-we-do {
         color: #071629;
+        position: relative;
       }
 
       .section-header {
@@ -306,6 +313,7 @@
         width: calc((100% / 4) - 2rem);
       }
 
+      /* Icons */
       [class*='holberton_school-icon-ic_'] {
         font-size: 80px;
         color: var(--links-hover-active);
@@ -322,11 +330,49 @@
         font-size: 14px;
         line-height: 26px;
       }
-      
 
+      /* Medium size */
+      @media all and (max-width: 767px) {
+        .section-header {
+          width: 100%;
+          height: 100%;
+          padding: 0 10%;
+          text-align: center;
+        }
 
+        .row {
+          flex-wrap: wrap;
+          margin: 0;
+        }
 
+        .section-body {
+          width: 480px;
+        }
 
+        .col-1-4 {
+          width: calc((100% / 2) - 2rem);
+          padding: 0 6%;
+        }
+      }
 
+      /* Small size - mobile */
+      @media all and (max-width: 480px) {
+        .section-header {
+          width: 100%;
+          height: 100%;
+          padding: 0 10%;
+          text-align: center;
+        }
+        .row {
+          flex-direction: column;
+          margin: 0;
+        }
 
+        [class^="col-"] {
+          margin: 0 0 3rem 0;
+        }
 
+        .col-1-4 {
+          width: 100%;
+        }
+      }
