--- a/1-styles.css
+++ b/1-styles.css
@@ -213,11 +213,16 @@
 
       /* Responsive Background and Menu */
       @media all and (max-width: 767px) {
+        .header {
+          background-position: 40% 50%;
+          background-size: cover;
+        }
+        
         .header-logo {
           padding-left: 3%;
         }
       }
-      
+
       @media all and (max-width: 480px) {
 
         .header {
