--- a/1-styles.css
+++ b/1-styles.css
@@ -217,7 +217,7 @@
           background-position: 40% 50%;
           background-size: cover;
         }
-        
+
         .header-logo {
           padding-left: 3%;
         }
@@ -356,7 +356,7 @@
 
         .col-1-4 {
           width: calc((100% / 2) - 2rem);
-          padding: 0 6%;
+          padding: 0;
         }
       }
 
